# owesome--project

./: .env.example  .gitignore  LICENSE  MVP_PLAN.md  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  ruff.toml
alembic/: README  env.py
alembic/versions/: 20260430_01_workspace_permission_tables.py
docs/: agent_awel_refactor_plan.md  phase1-1-project-structure.md  phase1-4-api-framework.md  phase2-1-llm-integration.md  phase2-2-nl-to-sql.md  phase2-3-sql-execution-engine.md
frontend-react/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend-react/pages/: _app.tsx  index.tsx
frontend-react/pages/chat/: index.tsx
frontend-react/pages/construct/: index.tsx
frontend-react/src/api/: client.ts  permission.ts
frontend-react/src/hooks/: useChat.ts
frontend/src/: components.d.ts  style.less  vite-env.d.ts
frontend/src/api/: chat.ts
frontend/src/i18n/: zh-CN.json
src/: main.py
src/agent/: __init__.py  smoke.py
src/agent/adapter/: __init__.py  llm_adapter.py
src/agent/audit/: tool_call_log.py
src/agent/awel/: __init__.py  dag.py  operator.py
src/agent/core/: agent.py  base_agent.py  profile.py  react_agent.py
src/agent/expand/: __init__.py  charter.py  chat_awel_team.py  data_analyst.py  echo_agent.py  planner.py  summarizer.py  tool_agent.py  user_proxy.py
src/agent/resource/: __init__.py  manager.py
src/agent/util/: __init__.py  function_utils.py  json_parser.py
src/awesome/: __init__.py
src/chat/: schemas.py
src/chat/api/: __init__.py  chat.py
src/chat/crud/: chat.py
src/common/: router.py  utils.py
src/db/: constant.py  db_sql_gen.py
src/llm/: __init__.py  base.py  ollama.py  openai.py  service.py
src/system/: authz.py
src/templates/: __init__.py  sql_gen_prompt.py
tests/: test_example.py
tests/agent/: test_agent_runner.py  test_base_agent.py  test_charter.py  test_chat_stream_routing.py  test_dag.py  test_data_analyst.py  test_function_utils.py  test_json_parser.py  test_llm_adapter.py  test_planner.py  test_react_agent.py  test_resource_manager.py  test_summarizer.py  test_team_runner.py  test_tool_action.py  test_tool_base.py  test_tool_business.py  test_tool_calc.py  test_tool_pack.py
tests/core/: test_trace.py
(+56 files in other folders)
